<resources>
    <string name="app_name" translatable="false">Onhome</string>
    <string name="name" translatable="false">OnHome - Customer</string>
    <string name="currency" translatable="false">\u20B9</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="txtCredits" translatable="false"><a href="http://www.google.com">Google</a></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nav_terms" translatable="false">Terms &amp; Privacy</string>
    <string name="offer" translatable="false">Offer</string>
    <string name="start_time" translatable="false">Start Time :</string>
    <string name="end_time" translatable="false">End Time :</string>
    <string name="wallet" translatable="false">Wallet Used</string>
    <string name="coupon_used" translatable="false">Coupon Used</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="nav_home" translatable="false">Shop Now</string>
    <string name="nav_chat" translatable="false">Chat With Us</string>
    <string name="nav_user" translatable="false">User</string>
    <string name="nav_order" translatable="false">My Orders</string>
    <string name="nav_profile" translatable="false">My Profile</string>
    <string name="nav_support" translatable="false">Support</string>
    <string name="nav_about" translatable="false">About Us</string>
    <string name="failed" translatable="false">Sorry,Your Payment Has Failed</string>
    <string name="again" translatable="false">Please Try Again</string>
    <string name="retry" translatable="false">Retry Order</string>
    <string name="nav_review" translatable="false">Review Us</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_share" translatable="false">Share with Friends</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="btn_continue" translatable="false">Continue</string>
    <string name="btn_Register" translatable="false">Register</string>
    <string name="rewards_points" translatable="false">Rewards Points</string>
    <string name="rech_wallet" translatable="false">Recharge Wallet</string>
    <string name="continue_bt" translatable="false">Continue</string>
    <string name="wall_am" translatable="false">My Wallet Amount</string>
    <string name="et_login_phone_hint" translatable="false">Mobile Number</string>
    <string name="tv_login_email" translatable="false">Email</string>
    <string name="tv_login_password" translatable="false">Password</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="tv_login_note" translatable="false">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>
    <string name="dialog" translatable="false">Select Item</string>
    <string name="tv_reg" translatable="false">Register</string>
    <string name="tv_reg_name_hint">Name</string>
    <string name="tv_reg_pincode">Pincode/Area Code/Zip</string>
    <string name="tv_reg_socity">Society/Flat</string>
    <string name="order_amount" translatable="false">Order Amount</string>
    <string name="btn_reg_socity_choose">Choose Society...</string>
    <string name="tv_reg_house">Address</string>
    <string name="amount_pa" translatable="false">Amount Payable</string>
    <string name="add_del" translatable="false">Add delivery address</string>
    <string name="btn_reg_update">Update Profile</string>
    <string name="et_reg_search">Search Society...</string>
    <string name="et_sea" translatable="false">Search Society..</string>
    <string name="total" translatable="false">Total :</string>
    <string name="total_amt" translatable="false">Amount :</string>
    <string name="tv_reg_note">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address">Address(Required)</string>
    <string name="et_reg_address">Complete Address</string>
    <string name="use" translatable="false">Use</string>
    <string name="store" translatable="false">Store Pick Up</string>
    <string name="confirm_order" translatable="false">Confirm</string>
    <string name="pickup" translatable="false">PickUp / COD</string>
    <string name="cash" translatable="false">Cash On Delivery</string>
    <string name="tv_cart_title">Cart</string>
    <string name="debit" translatable="false">Debit / Credit Card</string>
    <string name="net" translatable="false">Net Banking</string>
    <string name="card" translatable="false">Cards</string>
    <string name="promo" translatable="false">Promo Code</string>
    <string name="tv_cart_clear">Clear All Product</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">Total:\u0020</string>
    <string name="tv_cart_item">Items:\u0020</string>
    <string name="tv_cart_rs">\u0020Rs</string>
    <string name="coupon" translatable="false">Coupon</string>
    <string name="sure_del" translatable="false">Are you sure!
    you want to delete all cart product</string>
    <string name="tv_del_title">Delivery Date/Time</string>
    <string name="tv_del_address">Delivery Address</string>
    <string name="et_del_address_hint">Enter Delivery address..</string>
    <string name="tv_del_continue">Continue With Time</string>
    <string name="tv_del_date">Select delivery date</string>
    <string name="tv_del_time">Select delivery time</string>
    <string name="tv_del_date_time">Delivery Data/Time</string>
    <string name="tv_total_item_amount">Total Items And Amount</string>
    <string name="tv_total_total">Total Amount </string>
    <string name="abouts_1">Order biggest grocery  shopping app  get prices  lower than supermarket. save more with onhome ! get guaranteed lowest prices on all supermarket shopping  , home delivery in Gwalior city, onhome is your lowest online store where you get the latest products from patanjali , ashirvaad, saffola  , amul , mother dairy, vegetables, bakery , fresh fruits, etc  ….     :</string>
    <string name="tv_home_cat">Products</string>
    <string name="tv_home_view">View all ></string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="tv_app_name">Wallet</string>
    <string name="tv_product_name" translatable="false">Products</string>
    <string name="selling_product" translatable="false">Top Selling Products</string>
    <string name="deals" translatable="false">Today Offer</string>
    <string name="view_all" translatable="false">View All</string>
    <string name="sponsered" translatable="false">Sponsored</string>
    <string name="shop_by_category" translatable="false">Shop By Category</string>
    <string name="shop_now" translatable="false">Shop Now</string>
    <string name="feature" translatable="false">Featured Brand</string>
    <string name="condition" translatable="false">Condition</string>
    <string name="tv_toolbar_name" translatable="false">Rewards</string>
    <string name="tv_pro_add">Add</string>
    <string name="tv_pro_update">Update</string>
    <string name="tv_pro_price">Price</string>
    <string name="tv_toolbar_price" translatable="false">Price :</string>
    <string name="tv_toolbar_redeem" translatable="false">Redeem</string>
    <string name="tv_out" translatable="false">Out of Stock</string>
    <string name="tv_rech" translatable="false">Enter Wallet Amount</string>
    <string name="tv_rech_wall" translatable="false">Recharge</string>
    <string name="tv_mywall" translatable="false">Recharge Wallet</string>
    <string name="tv_pro_rs">\u0020Rs.\u0020</string>
    <string name="tv_pro_total">Total: </string>
    <string name="tv_conf_order_title">Payment Details</string>
    <string name="tv_order_cancle">Cancel Order</string>
    <string name="tv_order_summery">Summary</string>
    <string name="tv_order_total">Total: Rs.</string>
    <string name="tv_order_qty">Qty</string>
    <string name="tv_order_rs">Rs.</string>
    <string name="tv_thanks_title" translatable="false">Thank you for your order.</string>
    <string name="tv_thanks_home" translatable="false">Continue home</string>
    <string name="tv_thanks_order" translatable="false">Track my order</string>
    <string name="thanks" translatable="false">Thanks Order</string>
    <string name="paytm" translatable="false">Paytm</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="my_order" translatable="false">My Order</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="delivery" translatable="false">Delivery</string>
    <string name="delivery_date" translatable="false">"Delivery Date: </string>
    <string name="please_select_date" translatable="false">Please select date</string>
    <string name="no_rcord_found" translatable="false">Item Not Available</string>
    <string name="connection_time_out" translatable="false">Connection Time out</string>
    <string name="add_delivery_address" translatable="false">Add Delivery Address</string>
    <string name="order_now" translatable="false">Order Now</string>
    <string name="payment_detail" translatable="false">Payment Details</string>
    <string name="delivery_time" translatable="false">Delivery time</string>
    <string name="please_enter_pincode" translatable="false">Please enter pincode</string>
    <string name="receiver_mobile_number" translatable="false">Receiver Mobile Number(Required)</string>
    <string name="receiver_name_req" translatable="false">Receiver Name(Required)</string>
    <string name="phone_too_short" translatable="false">Phone Too short</string>
    <string name="please_add_address">Please add address</string>
    <string name="pay" translatable="false">Payment</string>
    <string name="please_select_address">Please select address</string>
    <string name="please_select_date_time">Please select date and time</string>
    <string name="profile_updated">Profile updated</string>
    <string name="uploading_profile_data">Uploading profile data</string>
    <string name="cancle_order_note">Are you sure!\nyou want to cancle order ?</string>
    <string name="no">No</string>
    <string name="order_id" translatable="false">Order Id</string>
    <string name="order_detail" translatable="false">Order Detail</string>
    <string name="yes">Yes</string>
    <string name="id" translatable="false">ID</string>
    <string name="order_mode" translatable="false">Order Mode</string>
    <string name="tracking_st" translatable="false">Tracking Status On</string>
    <string name="tt_t" translatable="false">Total Items</string>
    <string name="thank_you">Thank you</string>
    <string name="date_d" translatable="false">Date:</string>
    <string name="time_t" translatable="false">Time:</string>
    <string name="place_on" translatable="false">Placed On:</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="contact" translatable="false">اتصل بنا</string>
    <string name="order_fail" translatable="false">Order Fail</string>
    <string name="cart_em" translatable="false">Your Cart is empty!</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="add_cart" translatable="false">Add items to it now</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password (Required)</string>
    <string name="new_password">New Password (Required)</string>
    <string name="confirm_password">Confirm Password (Required)</string>
    <string name="tv_deli_mobile">Mobile No.:</string>
</resources>