<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_10">

            <Fonts.LatoBLack
                android:textColor="#000"
                android:id="@+id/tv_change_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_change_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:layout_marginTop="@dimen/space_4"
                android:textSize="@dimen/space_14"
                android:inputType="textPassword" />

            <Fonts.LatoBLack
                android:textColor="#000"
                android:id="@+id/tv_change_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_change_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginTop="@dimen/space_4"
                android:textSize="@dimen/space_14"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textPassword" />

            <Fonts.LatoBLack
                android:textColor="#000"
                android:id="@+id/tv_change_con_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_change_con_password"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/space_14"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textPassword" />

            <RelativeLayout
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="12dp"
                android:background="@drawable/bg_rounded_button"
                android:padding="12dp">

                <Fonts.LatoBLack
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/change_password"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_small"/>





            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>