<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/space_10"
    tools:context="tech.iwish.onhome.SplashActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingRight="@dimen/space_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_cart" />

    <Fonts.LatoBLack
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_16"
        android:gravity="center"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/cart_em"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="326dp" />

    <Fonts.LatoBLack
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_8"
        android:gravity="center"
        android:shadowDx="1"
        android:shadowDy="1"
        android:text="@string/add_cart"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="326dp" />

    <RelativeLayout
        android:id="@+id/btn_shopnow"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_12"
        android:layout_marginRight="@dimen/space_12"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/bg_rounded_button"
        android:padding="12dp">

        <Fonts.LatoBLack
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/shop_now"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_small" />


    </RelativeLayout>


</LinearLayout>
